Fix bot tag css (centre them and make them visible on the popout)

--- a/partials/_profile_popout.scss
+++ b/partials/_profile_popout.scss
@@ -25,7 +25,8 @@ div[class^='userPopout'] {
             color: rgba(white, 0.7) !important;
         }
 
-        span:last-of-type {
+        span[class^='botTag'] {
+            background-color: rgba(white, 0.7);
             color: $main-colour !important;
             font-weight: 500 !important;
 
